@@ -178,11 +178,14 @@ L<PYX::XMLNorm>.
 
 =head1 AUTHOR
 
-Michal Špaček L<skim@cpan.org>.
+Michal Špaček L<mailto:skim@cpan.org>
+
+L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
-BSD 2-Clause License
+ © Michal Špaček 2005-2014
+ BSD 2-Clause License
 
 =head1 VERSION
 
