@@ -1,4 +1,7 @@
 0.02
+ [Common]
+ - Improve AUTHOR and LICENSE AND COPYRIGHT sections in doc.
+
  [PYX::Parser]
  - Fix SYNOPSIS section in doc.
 
